--- a/src/modulomonitores/monitoresBundle/Resources/config/routing.yml
+++ b/src/modulomonitores/monitoresBundle/Resources/config/routing.yml
@@ -1,10 +1,19 @@
 modulomonitores_monitores_homeMonitores:
     pattern:  /homeMonitores
     defaults: { _controller: modulomonitoresmonitoresBundle:Default:homeMonitores }
+    
 modulomonitores_monitores_sesionesMonitores:
     pattern:  /sesionesMonitores
     defaults: { _controller: modulomonitoresmonitoresBundle:Default:sesionesMonitores }
+    
 modulomonitores_monitores_sesionMonitores:
     pattern:  /sesionMonitores/{matricula}
     defaults: { _controller: modulomonitoresmonitoresBundle:Default:sesionMonitores }    
 
+modulomonitores_monitores_sesionesDedicadas:
+    pattern:  /sesionesDedicadas
+    defaults: { _controller: modulomonitoresmonitoresBundle:Default:sesionesDedicadas }    
+    
+modulomonitores_monitores_sesionDedicada:
+    pattern:  /sesionDedicada/{matricula}
+    defaults: { _controller: modulomonitoresmonitoresBundle:Default:sesionDedicada } 
