--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,24 @@
-languaje: php
-
+language: php
 php:
-    - 5.5
+  # aliased to a recent 5.5.x version
+  - 5.5
+  # aliased to a recent 5.6.x version
+  - 5.6
+  # aliased to a recent 7.x version
+  - 7.0
+  # aliased to a recent hhvm version
+  - hhvm
 
-before_script:
-  - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer install
-  - php app/console doctrine:database:create --env=test
-  - php app/console doctrine:schema:create --env=test
-  - php app/console doctrine:fixtures:load -n --env=test
+env:
+  - DB=mysql
+  - DB=pgsql
 
-script:
-  - phpunit -c app
-  
+matrix:
+  exclude:
+    - php: hhvm
+      env: DB=pgsql  # PDO driver for pgsql is unsupported by HHVM (3rd party install for support)
+  allow_failures:
+    - php: 7.0
+    - php: hhvm
+
+script: phpunit --configuration phpunit_$DB.xml --coverage-text
