--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,16 @@
 language: php
 php:
-  # aliased to a recent 5.5.x version
-  - 5.5
-  # aliased to a recent 5.6.x version
-  - 5.6
-  # aliased to a recent 7.x version
-  - 7.0
-  # aliased to a recent hhvm version
-  - hhvm
+ - 5.3
+ - 5.4
+ - 5.5
+ - 5.6
+ - 5.7
+  
+script: 
+ - phpunit -c app/
 
-env:
-  - DB=mysql
-  - DB=pgsql
-
-matrix:
-  exclude:
-    - php: hhvm
-      env: DB=pgsql  # PDO driver for pgsql is unsupported by HHVM (3rd party install for support)
-  allow_failures:
-    - php: 7.0
-    - php: hhvm
-
-script: phpunit --configuration phpunit_$DB.xml --coverage-text
+before_script:
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
+  
+  - composer install
+  
