--- a/src/Crivero/PruebaBundle/Resources/config/routing.yml
+++ b/src/Crivero/PruebaBundle/Resources/config/routing.yml
@@ -60,13 +60,13 @@ crivero_prueba_cancha:
     pattern:  /cancha/{id}
     defaults: { _controller: CriveroPruebaBundle:Cancha:cancha }
     
-crivero_prueba_torneos:
-    pattern:  /torneos
-    defaults: { _controller: CriveroPruebaBundle:Torneo:torneos }
+crivero_prueba_competiciones:
+    pattern:  /competiciones
+    defaults: { _controller: CriveroPruebaBundle:Competicion:competiciones }
 
-crivero_prueba_torneo:
-    pattern:  /torneo/{id}
-    defaults: { _controller: CriveroPruebaBundle:Torneo:torneo }
+crivero_prueba_competicion:
+    pattern:  /competicion/{id}
+    defaults: { _controller: CriveroPruebaBundle:Competicion:competicion }
 
 crivero_prueba_equipos:
     pattern:  /equipos
