--- a/src/moduloclientes/clienteBundle/Resources/config/routing.yml
+++ b/src/moduloclientes/clienteBundle/Resources/config/routing.yml
@@ -10,13 +10,24 @@ moduloclientes_cliente_reservasClientes:
 moduloclientes_cliente_reservaClientes:
     pattern:  /reservaClientes/{id}
     defaults: { _controller: moduloclientesclienteBundle:Reserva:reservaClientes }
-    
+#-------------------------------------------------------------------------------------------
+#Competiciones, equipos y jugadores
 moduloclientes_cliente_competicionesClientes:
     pattern:  /competicionesClientes
     defaults: { _controller: moduloclientesclienteBundle:Competicion:competicionesClientes }
+    
 moduloclientes_cliente_competicionClientes:
     pattern:  /competicionClientes/{id}
     defaults: { _controller: moduloclientesclienteBundle:Competicion:competicionClientes }
+    
+moduloclientes_cliente_equiposClientes:
+    pattern:  /equiposClientes
+    defaults: { _controller: moduloclientesclienteBundle:Equipo:equiposClientes }
+    
+moduloclientes_cliente_equipoClientes:
+    pattern:  /equipoClientes/{id}
+    defaults: { _controller: moduloclientesclienteBundle:Equipo:equipoClientes }
+#-------------------------------------------------------------------------------------------
     
 moduloclientes_cliente_sesionesClientes:
     pattern:  /sesionesClientes
