el cliente puede crearse un nuevo equipo (se crea pero hay que pulir unas cuantas cosas)

--- a/src/moduloclientes/clienteBundle/Resources/config/routing.yml
+++ b/src/moduloclientes/clienteBundle/Resources/config/routing.yml
@@ -29,6 +29,16 @@ moduloclientes_cliente_competicion_crear:
     defaults: { _controller: moduloclientesclienteBundle:Competicion:crear }
     requirements:
         _method:  POST|GET
+        
+moduloclientes_cliente_equipo_nuevo:
+    pattern:  /nuevoEquipoCliente
+    defaults: { _controller: moduloclientesclienteBundle:Equipo:nuevo }
+    
+moduloclientes_cliente_equipo_crear:
+    pattern:  /crearEquipo
+    defaults: { _controller: moduloclientesclienteBundle:Equipo:crear }
+    requirements:
+        _method:  POST|GET
     
 moduloclientes_cliente_equiposClientes:
     pattern:  /equiposClientes
