--- a/src/modulomonitores/monitoresBundle/Resources/config/routing.yml
+++ b/src/modulomonitores/monitoresBundle/Resources/config/routing.yml
@@ -110,3 +110,6 @@ modulomonitores_monitores_participante:
 modulomonitores_monitores_abandonarSesion:
     pattern:  /abandonarSesion/{id}
     defaults: { _controller: modulomonitoresmonitoresBundle:Sesion:abandonarSesion}
+modulomonitores_monitores_verHorario:
+    pattern:  /verHorario/{id}
+    defaults: { _controller: modulomonitoresmonitoresBundle:Sesion:verHorario }    
